--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.17.1
   flutter_contacts: ^1.1.4
+  audio_waveforms:
+    git:
+      url: https://github.com/SimformSolutionsPvtLtd/audio_waveforms.git
+      ref: hotfix/flutter_version3.0.0
 
 dev_dependencies:
   flutter_test:
